--- a/style.css
+++ b/style.css
@@ -32,6 +32,18 @@
 }
 }
 
+img {
+    max-width: 600px;
+    height: auto;
+}
+
+@media (max-width: 1200px){
+    img {
+    max-width: 300px;
+    height: auto;
+}
+}
+
 
 .container div.header {
     grid-area: header;
